--- a/annotador-web/src/main/webapp/css/main.css
+++ b/annotador-web/src/main/webapp/css/main.css
@@ -758,7 +758,7 @@ h3 {
 }
 
 h4 {
-  font-size: 18px;
+  font-size: 22px;
 }
 
 h5 {
@@ -2194,6 +2194,7 @@ body {
 .single-work-process {
   margin-top: 30px;
   text-align: center;
+  min-width: 100px;
 }
 
 @media (max-width: 767px) {
@@ -2228,18 +2229,19 @@ body {
 
 .work-arrow {
   margin-top: -30px;
+
 }
 
 @media (max-width: 1199px) {
   .work-arrow img {
-    width: 40px;
+    width: 10px;
     height: auto;
   }
 }
 
 @media (max-width: 991px) {
   .work-arrow img {
-    width: 25px;
+    width: 10px;
     height: auto;
   }
 }
