JSON output added

--- a/annotador-web/src/main/webapp/css/bootstrap.css
+++ b/annotador-web/src/main/webapp/css/bootstrap.css
@@ -645,12 +645,14 @@ pre code {
 .no-gutters {
   margin-right: 0;
   margin-left: 0;
+  padding-bottom: 10px;
 }
 
 .no-gutters > .col,
 .no-gutters > [class*="col-"] {
   padding-right: 0;
   padding-left: 0;
+  padding-bottom: 10px;
 }
 
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col,
