--- a/annotador-web/src/main/webapp/css/main.css
+++ b/annotador-web/src/main/webapp/css/main.css
@@ -235,7 +235,6 @@ td, th {
 }
 
 .mt-10 {
-  margin-top: 10px;
 }
 
 .mt-15 {
@@ -1324,10 +1323,9 @@ td.legend {
   padding: 0 20px;
   height: 150px;
   resize: inherit;
-  margin-left: 20px;
+  margin-left: 1rem;
   margin-bottom: 5%;
   margin-right: 5%;
-  margin-top: 5%;
       padding: 0.6rem;
 }
 
