--- a/annotador-web/src/main/webapp/css/nice-select.css
+++ b/annotador-web/src/main/webapp/css/nice-select.css
@@ -6,8 +6,8 @@
   box-sizing: border-box;
   clear: both;
   cursor: pointer;
-  display: block;
-  float: left;
+  display: inline-block;
+  float: inherit;
   font-family: inherit;
   font-size: 14px;
   font-weight: normal;
