--- a/annotador-web/src/main/webapp/css/main.css
+++ b/annotador-web/src/main/webapp/css/main.css
@@ -838,6 +838,7 @@ td.legend {
 #colortime { background-color: #ffbb99; }
 #colorset { background-color: #ccb3ff; }
 #colorduration { background-color: #99ffeb; }
+#colorinterval { background-color: #9bd29b; }
 
 
 .testDiv{ 
